とりあえずPUSH

--- a/comp/sass/second/_stage.scss
+++ b/comp/sass/second/_stage.scss
@@ -38,6 +38,7 @@
   &.ct-TimeTable__Time--last{border-bottom:none;}
   &.ct-TimeTable__Info{
     border: 1px solid $primary__green;
+    background: #fff;
   }
   &.ct-TimeTable__Corner{
     color: #1e0111;
