--- a/comp/sass/second/_foodsDetail.scss
+++ b/comp/sass/second/_foodsDetail.scss
@@ -15,6 +15,7 @@
         display: block;
         color: #e4007f;
         font-size: 11px;
+        display: none;
       }
     }
     &__discription {
@@ -99,20 +100,20 @@
       color: #767677;
     }
     }
-  
-  
-  
+
+
+
   }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
+
   .foodsDetail{
     .foodsDetail{
     &__foodsPic {
