--- a/comp/sass/second/_workshopDetail.scss
+++ b/comp/sass/second/_workshopDetail.scss
@@ -232,18 +232,25 @@
     text-align: center;
     font-size: 16px
   }
-  &.ws-map_btn a {
-    display: block;
-    width: 100%;
-    text-align: center;
-    background-color: #8cc63f;
-    padding: 10px 0px;
-    color: #FFF;
-    font-weight: bold;
-    box-shadow: 0 2px 0 0 #70a22f;
-    border-radius: 3px;
-    font-size: 17px;
-}
+  &.ws-map_btn {
+    a {
+      display: block;
+      width: 100%;
+      text-align: center;
+      background-color: #8cc63f;
+      padding: 10px 0px;
+      color: #FFF;
+      font-weight: bold;
+      box-shadow: 0 2px 0 0 #70a22f;
+      border-radius: 3px;
+      font-size: 17px;
+    }
+    &.workshopDetail__btnOver a {
+      background-color: #ccc;
+      box-shadow: 0 2px 0 0 #999;
+      pointer-events: none;
+    }
+  }
   &.ws-map_img {
     padding: 20px;
   }
