--- a/comp/sass/second/_stage.scss
+++ b/comp/sass/second/_stage.scss
@@ -165,6 +165,10 @@
         width: 100%;
       }
     }
+    .sw-FlexMedia__Text span {
+      display: block;
+      font-size: 1rem;
+    }
   }
 }
 
