--- a/comp/sass/second/_workshopTable.scss
+++ b/comp/sass/second/_workshopTable.scss
@@ -69,10 +69,28 @@
   }
 
 
+  
   thead {
     border-top: 2px solid #8ac832;font-size: 13px;line-height: 19px;
     th:nth-of-type(2) {background-color: #fce5f2;}
     th:nth-of-type(3) {background-color: #e3f2f7;}
+  }
+}
+
+.workshopArea{
+  &__top{
+    &__logo {
+      width: 54%;
+      display: inline;
+      vertical-align: middle;
+      padding-right: 4px;
+    }
+    &__text {
+      color: #1e0111;
+    }
+    p img {
+      margin: 36px 0px;
+    }
   }
 }
 
