--- a/comp/sass/second/_workshopTable.scss
+++ b/comp/sass/second/_workshopTable.scss
@@ -98,6 +98,16 @@
 
 @media screen and (min-width: 751px) {
   .workshopArea {
+    &__top p img {
+      width: 85%;
+      margin: 80px auto 47px;
+    }
+    &__top__text {
+      font-size: 16px;
+    }
+    &__top__logo {
+      width: 23%;
+    }
     .ct-MemberList__Date {
       display: none;
     }
