--- a/comp/sass/second/_workshopTable.scss
+++ b/comp/sass/second/_workshopTable.scss
@@ -87,7 +87,7 @@
   }
 
 
-  
+
   thead {
     border-top: 2px solid #8ac832;font-size: 13px;line-height: 19px;
     th {width: 14%;}
@@ -184,7 +184,7 @@
     }
   }
 
-  .tab-content .tab-pane:nth-of-type(1) table {width: 460px;}
+  .workshopArea .tab-content .tab-pane:nth-of-type(1) table {width: 460px;}
   .workshopTable tr th {
     width: 82px;
     &:last-child {
