--- a/comp/sass/pc/_base.scss
+++ b/comp/sass/pc/_base.scss
@@ -1,6 +1,8 @@
 @media (min-width: 751px) {
   .second {
     width: 840px;
+    padding-left: 0;
+    padding-right: 0;
     margin: 0 auto;
   }
   .decoBottom {
@@ -32,11 +34,14 @@
   .scheduleArea__registrationArea__btn {
     height: 70px;
     font-size: 30px;
-    line-height: 1.3;
+    line-height: 2;
     padding-top: 6px;
     span {
       font-size: 15px;
     }
+  }
+  .detail-Basic.memberDetail {
+    margin-bottom: 80px;
   }
 }
 
