--- a/comp/sass/second/_goodsArea.scss
+++ b/comp/sass/second/_goodsArea.scss
@@ -4,25 +4,32 @@
     margin-bottom: 6px;
   }
   .goodsArea__list ul {
-    margin-left: -16px;
-    margin-right: -16px;
+    // margin-left: -16px;
+    // margin-right: -16px;
   }
   .goodsArea__listItem {
+    float: left;
+    width: 49%;
+    overflow: hidden;
+    margin-bottom: 16px;
+    &:nth-of-type(odd) {
+      margin-right: 2%;
+    }
     a {
-      display: flex;
-      align-items: center;
-      padding: 12px 16px;
-      border-bottom: 1px solid #dcdcdc;
-      position: relative;
+      // display: flex;
+      // align-items: center;
+      // padding: 12px 16px;
+      // border-bottom: 1px solid #dcdcdc;
+      // position: relative;
       &:after {
-        content: "";
-        width: 12px;
-        height: 12px;
-        border-top: 2px solid #8cc63f;
-        border-right: 2px solid #8cc63f;
-        transform: rotate(45deg);
-        position: absolute;
-        right: 1em;
+        // content: "";
+        // width: 12px;
+        // height: 12px;
+        // border-top: 2px solid #8cc63f;
+        // border-right: 2px solid #8cc63f;
+        // transform: rotate(45deg);
+        // position: absolute;
+        // right: 1em;
       }
       > div {
         span:first-child {
