一旦マージ

--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -139,6 +139,17 @@
   }
 
 
+.footerMap_note {
+  text-align: left;
+  line-height: 22px;
+  img {
+    width: 20px;
+    display: inline;
+    margin-right: 6px;
+  }
+}
+
+
 
 
 // 11/30までの仮css
