--- a/comp/sass/second/_foods.scss
+++ b/comp/sass/second/_foods.scss
@@ -1,15 +1,3 @@
-.foodsArea {
-  .foodsNote {
-    text-align: left;
-    line-height: 22px;
-    img {
-      width: 20px;
-      display: inline;
-      margin-right: 6px;
-    }
-  }
-}
-
 .foodsArea__main {
   h3 span {
     display: block;
@@ -158,6 +146,7 @@
       padding-bottom: 24px;
       h3 {
         text-align: center;
+        font-size:18px;
       }
       ul {
         display: flex;
