--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -11,6 +11,12 @@
   b {
     display: block;
   }
+  .workshopTable__ws-Detail_Title {
+    color: #e4007f;
+    font-size: 1.6rem;
+    line-height: 1;
+    margin: 12px;
+  }
 }
 
 .secondBase {
