goodsDetail__PC完成しました

--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -39,6 +39,7 @@
 @import "pc/_footer";
 @import "pc/_foods";
 @import "pc/_foodsDetail";
+@import "pc/_goodsDetail";
 @import "pc/_attractionDetail";
 
 
