--- a/comp/sass/second/_diaryArea.scss
+++ b/comp/sass/second/_diaryArea.scss
@@ -23,7 +23,7 @@
 &__discription {
   margin-bottom: 24px;
   padding-bottom: 24px;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #d8d8d8;
   p {
     border: 2px solid #8cc63f;
     border-radius: 30px;
@@ -80,7 +80,7 @@
     line-height: 50px;
     border: none;
     font-weight: 700;
-    margin: 20px 0px 50px;
+    margin: 20px 0px;
     a {
       display: block;
       font-weight: 700;
@@ -137,6 +137,7 @@
     margin: 46px 0px;
   h3 {
     text-align: left;
+    margin-bottom: 12px;
   }
   // .diaryDetail__title {
   //   text-align: left;
@@ -152,6 +153,7 @@
   &__monthLink {
     h3 {
     text-align: left;
+    margin-bottom: 12px;
     }
     ul {
       overflow: hidden;
