--- a/comp/sass/pc/_base.scss
+++ b/comp/sass/pc/_base.scss
@@ -3,7 +3,7 @@
     width: 840px;
     padding-left: 0;
     padding-right: 0;
-    margin: 0 auto;
+    margin: 0 auto 80px;
   }
   .decoBottom {
     display: none;
