--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -16,6 +16,7 @@
     font-size: 1.6rem;
     line-height: 1;
     margin: 12px;
+    text-align: left;
   }
 }
 
@@ -81,9 +82,9 @@
     li {
       width: 167px;
       margin-bottom: 9px;
-    a img {
+      a img {
         width: 100%;
-    }
+      }
     }
   }
   &__modalContent {
@@ -142,7 +143,7 @@
   width:100%;
   height:120%;
   background-color:rgba(0,0,0,0.3);
-  }
+}
 
 
 .footerMap_note {
@@ -155,6 +156,17 @@
   }
 }
 
+@media screen and (min-width: 751px) {
+  .footerMap_note {
+    line-height: 52px;
+    img {
+      width: 50px;
+    }
+  }
+  .second .workshopTable__ws-Detail_Title {
+    text-align: center;
+  }
+}
 
 
 
