goods/diary2018デバック修正完了しました！

--- a/comp/sass/pc/_goodsDetail.scss
+++ b/comp/sass/pc/_goodsDetail.scss
@@ -30,6 +30,10 @@
     &__notes ul li {
       font-size: 14px;
     }
+    &__discription h3 {
+      text-align: left;
+      font-size: 18px;
+    }
   }
 
 
