--- a/comp/sass/second/_attractionDetail.scss
+++ b/comp/sass/second/_attractionDetail.scss
@@ -18,7 +18,7 @@
     margin-top: 20px;
     a {
       text-decoration: underline;
-      color: #8cc63f;
+      color: $positiveColor__01;
       font-size: 13px;
       font-weight: bold;
       position: relative;
@@ -27,8 +27,8 @@
         content: "";
         width: 8px;
         height: 8px;
-        border-top: solid 2px #8cc63f;
-        border-right: solid 2px #8cc63f;
+        border-top: solid 2px $positiveColor__01;
+        border-right: solid 2px $positiveColor__01;
         transform: rotate(45deg);
         position: absolute;
         right: -12px;
