--- a/comp/sass/second/_eventArea.scss
+++ b/comp/sass/second/_eventArea.scss
@@ -39,7 +39,7 @@
       align-items: center;
       height: 48px;
       border-radius: 3px;
-      background-color: #8cc63f;
+      background-color: $positiveColor__01;
       -webkit-box-shadow: 0 2px 0 0 #70a22f;
       box-shadow: 0 2px 0 0 #70a22f;
       color: #fff;
