--- a/comp/sass/base/_access.scss
+++ b/comp/sass/base/_access.scss
@@ -29,7 +29,7 @@
     padding-top:0.8em;
       a{
         text-decoration: underline;
-        color: #8cc63f;
+        color: $positiveColor__01;
         font-size: 14px;
         line-height: 20px;
         letter-spacing: 1.1px;
@@ -45,8 +45,8 @@
         //   display: block;
         //   width: 5px;
         //   height: 5px;
-        //   border-top: 2px solid #8cc63f;
-        //   border-right: 2px solid #8cc63f;
+        //   border-top: 2px solid $positiveColor__01;
+        //   border-right: 2px solid $positiveColor__01;
         //   transform: rotate(45deg);
         //   position: absolute;
         //   top: 0;
