--- a/comp/sass/base/_footer.scss
+++ b/comp/sass/base/_footer.scss
@@ -93,7 +93,7 @@ footer {
       span {
         font-size: 14px;
         font-weight: 100;
-        color: #e4007e;
+        color: $secondary__pink;
       }
     }
   }
@@ -104,7 +104,7 @@ footer {
     width: 300px;
     height: 45px;
     border-radius: 3px;
-    background-color: #8cc63f;
+    background-color: $positiveColor__01;
     box-shadow: 0 2px 0 0 #70a22f;
     color: #fff;
     flex-direction: column;
