--- a/comp/sass/base/_scheduleArea.scss
+++ b/comp/sass/base/_scheduleArea.scss
@@ -61,8 +61,8 @@
         display: block;
         width: 10px;
         height: 10px;
-        border-top: 2px solid #8cc63f;
-        border-right: 2px solid #8cc63f;
+        border-top: 2px solid $positiveColor__01;
+        border-right: 2px solid $positiveColor__01;
         transform: rotate(45deg);
         position: absolute;
         top: 0;
@@ -223,3 +223,12 @@
   }
 }
 
+.scheduleArea__kouyasanImage {
+  margin: 24px auto;
+}
+@media screen and (min-width: 751px) {
+  .scheduleArea__kouyasanImage {
+    width: 840px;
+    margin-bottom: 60px;
+  }
+}
