--- a/comp/sass/second/_base.scss
+++ b/comp/sass/second/_base.scss
@@ -2,7 +2,7 @@
   h3 {
     text-align: center;
     font-size: 14px;
-    color: #e4007f;
+    color: $secondary__pink;
     margin-bottom: 24px;
   }
   div p {
@@ -12,7 +12,7 @@
     display: block;
   }
   .workshopTable__ws-Detail_Title {
-    color: #e4007f;
+    color: $secondary__pink;
     font-size: 1.6rem;
     line-height: 1;
     margin: 12px;
@@ -59,7 +59,7 @@
     align-items: center;
     width: 180px;
     height: 44px;
-    background-color: #e4007f;
+    background-color: $secondary__pink;
     color: #fff;
     font-size: 14px;
     font-weight: 700;
@@ -93,7 +93,7 @@
     z-index:2;
     width:90%;
     margin:0;
-    border: solid 2px #e4007f;
+    border: solid 2px $secondary__pink;
     background:#fff;
     .modal-close {
       position: absolute;
@@ -105,7 +105,7 @@
       text-align: center;
       display: inline-block;
       border-radius: 50%;
-      background: #e4007f;
+      background: $secondary__pink;
       border: 2px solid #FFF;
       &:before {
         content: "";
