--- a/comp/sass/second/_foods.scss
+++ b/comp/sass/second/_foods.scss
@@ -10,7 +10,7 @@
     li {
       width: 48%;
       float: left;
-      border: solid 1px #e4007f;
+      border: solid 1px $secondary__pink;
       position: relative;
       margin-bottom: 16px;
       &:nth-child(2n){
@@ -52,8 +52,8 @@
       content: "";
       width: 12px;
       height: 12px;
-      border-top: solid 2px #8cc63f;
-      border-right: solid 2px #8cc63f;
+      border-top: solid 2px $positiveColor__01;
+      border-right: solid 2px $positiveColor__01;
       transform: rotate(45deg);
       position: absolute;
       right: 1em;
@@ -78,12 +78,12 @@
     font-size: 9px;
     line-height: 12px;
     display: block;
-    color: #e4007f;
+    color: $secondary__pink;
     font-weight: 700;
     display: none;
   }
   &__menuDetail span:last-child {
-    color: #8cc63f;
+    color: $positiveColor__01;
     font-size: 14px;
     font-weight: 700;
     display: block;
