--- a/comp/sass/second/_goodsArea.scss
+++ b/comp/sass/second/_goodsArea.scss
@@ -25,8 +25,8 @@
         // content: "";
         // width: 12px;
         // height: 12px;
-        // border-top: 2px solid #8cc63f;
-        // border-right: 2px solid #8cc63f;
+        // border-top: 2px solid $positiveColor__01;
+        // border-right: 2px solid $positiveColor__01;
         // transform: rotate(45deg);
         // position: absolute;
         // right: 1em;
@@ -34,7 +34,7 @@
       > div {
         span:first-child {
           font-size: 9px;
-          color: #e4007f;
+          color: $secondary__pink;
           font-weight: 700;
         }
         div {
@@ -43,7 +43,7 @@
           color: #1e0111;
         }
         span:last-child {
-          color: #8cc63f;
+          color: $positiveColor__01;
           font-size: 14px;
           font-weight: 700;
         }
